Fix scrollbar issue, crosshair issue

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,6 @@ html {
   background-size: cover;
 }
 
-
 *, *:before, *:after {
   box-sizing: inherit;
 }
@@ -28,6 +27,7 @@ body {
   padding: 0;
   margin: 0;
   height: 100%;
+  overflow: hidden;
 }
 
 h1 {
